# STM32-Hi3861-with-Three-Sensors_New

./: README.md
NEW_WORK/: BUILD.gn  demo_entry_posix.c  hal_iot_gpio_ex.c  iot_gpio_ex.h  lwip_tcp_client.c  lwip_tcp_server.c  main.c  net_demo.h  net_params.h  wifi_connecter.c  wifi_connecter.h
TEST_C_q16_new/: readme.txt
TEST_C_q16_new/HARDWARE/BH1750/: bh1750.c  bh1750.h
TEST_C_q16_new/HARDWARE/DHT11/: dht11.c  dht11.h
TEST_C_q16_new/HARDWARE/IIC/: myiic.c  myiic.h
TEST_C_q16_new/HARDWARE/IIC_B/: myiic_b.c  myiic_b.h
TEST_C_q16_new/HARDWARE/KEY/: key.c  key.h
TEST_C_q16_new/HARDWARE/LCD/: lcd.c  lcd_init.c  lcd_init.h
TEST_C_q16_new/HARDWARE/MPU6050/: mpu6050.c  mpu6050.h
TEST_C_q16_new/HARDWARE/MPU6050/eMPL/: inv_mpu.c
TEST_C_q16_new/HARDWARE/RTC/: rtc.c  rtc.h
TEST_C_q16_new/HARDWARE/SPI/: spi.c
TEST_C_q16_new/HARDWARE/W25QXX/: w25qxx.c  w25qxx.h
TEST_C_q16_new/SYSTEM/usart/: usart.c
TEST_C_q16_new/USER/: WORKS_PLAN_C.uvguix.YWJ  WORKS_PLAN_C.uvoptx  WORKS_PLAN_C.uvprojx  main.c
